@@ -16,6 +16,7 @@ bottom_quotes=Bottom Quotes
 quotes_of_the_week=Quotes of the Week
 search_for_quotes=Search for Quotes
 tag_cloud=Tag Cloud
+statistics=Statistics
 administration=Administration
 welcome=Welcome
 edit_quote=Edit Quote
@@ -37,6 +38,11 @@ quote_search_description=Search for Quotes
 quote_search_short_title=Search
 tag_cloud_description=View Tag Usage
 tag_cloud_short_title=Tags
+statistics_description=View Statistics
+statistics_short_title=Stats
+quote_count_by_date=Number of Quotes per Day
+quote_count_by_month=Number of Quotes per Month
+quote_count_by_week_day=Number of Quotes per Week Day
 submit_quote_description=Submit New Quote
 submit_quote_short_title=Submit
 administration_description=Administrative Interface
@@ -177,12 +183,32 @@ unknown=Unknown
 account_removal_confirmation=Are you sure you would like to remove the selected account? This cannot be undone.
 insufficient_administrative_privileges=You are not authorized to use this component because your administrative privileges are insufficient.
 no_tagged_quotes=There do not appear to be any quotes with tags.
+statistics_unavailable=Statistics are currently unavailable.
 tag_link_description=View Quotes Tagged %1%
 update_available=Update Available
 update_available_text=Chirpy! version %1% was released on %2%.
 update_link_text=Click here for more information.
 update_check_failed=Update Check Failed
 update_check_failed_text=Chirpy! attempted to check for updates, but failed. The reported error was:
+sunday=Sunday
+monday=Monday
+tuesday=Tuesday
+wednesday=Wednesday
+thursday=Thursday
+friday=Friday
+saturday=Saturday
+january=January
+february=February
+march=March
+april=April
+may=May
+june=June
+july=July
+august=August
+september=September
+october=October
+november=November
+december=December
 webapp.start_page_description=Start Page
 webapp.start_page_short_title=Home
 webapp.next_page_title=Next Page
