@@ -16,6 +16,7 @@ bottom_quotes=Laagst scorende quotes
 quotes_of_the_week=Quotes van de week
 search_for_quotes=Quotes zoeken
 tag_cloud=Tagwolk
+statistics=Statistieken
 administration=Administratie
 welcome=Welkom
 edit_quote=Quote bewerken
@@ -37,6 +38,8 @@ quote_search_description=Quotes zoeken
 quote_search_short_title=Zoek
 tag_cloud_description=Tellingen voor tags bekijken
 tag_cloud_short_title=Tags
+statistics_description=Statistieken bekijken
+statistics_short_title=Stats
 submit_quote_description=Nieuwe quote toevoegen
 submit_quote_short_title=Nieuw
 login_description=Gebruikersaccount openen
@@ -177,12 +180,35 @@ unknown=Onbekend
 account_removal_confirmation=Weet je zeker dat je de geselecteerde account wil verwijderen? Dit kan niet ongedaan worden gemaakt.
 insufficient_administrative_privileges=Je hebt geen toegang tot dit onderdeel omdat je administratieprivileges niet voldoen.
 no_tagged_quotes=Er is zo te zien geen enkele quote met tags eraan.
+statistics_unavailable=De statistieken zijn momenteel niet beschikbaar.
+quote_count_by_date=Aantal quotes per dag
+quote_count_by_month=Aantal quotes per maand
+quote_count_by_week_day=Aantal quotes per weekdag
 tag_link_description=Bekijk quotes met de tag %1%
 update_available=Update beschikbaar
 update_available_text=Chirpy! versie %1% werd vrijgegeven op %2%.
 update_link_text=Klik hier voor meer informatie.
 update_check_failed=Controleren op updates mislukt
 update_check_failed_text=Chirpy! probeerde te zoeken naar updates, maar dit mislukte. De gemelde fout was:
+sunday=zondag
+monday=maandag
+tuesday=dinsdag
+wednesday=woensdag
+thursday=donderdag
+friday=vrijdag
+saturday=zaterdag
+january=januari
+february=februari
+march=maart
+april=april
+may=mei
+june=juni
+july=juli
+august=augustus
+september=september
+october=oktober
+november=november
+december=december
 webapp.start_page_description=Startpagina
 webapp.start_page_short_title=Home
 webapp.next_page_title=Volgende pagina
