@@ -36,6 +36,7 @@
 	href="<TMPL_VAR NAME="BOTTOM_QUOTES_URL">" title="<TMPL_VAR NAME="BOTTOM_QUOTES_DESCRIPTION">"><TMPL_VAR NAME="BOTTOM_QUOTES_SHORT_TITLE"></a></li><li><a
 	href="<TMPL_VAR NAME="QUOTE_SEARCH_URL">" title="<TMPL_VAR NAME="QUOTE_SEARCH_DESCRIPTION">"><TMPL_VAR NAME="QUOTE_SEARCH_SHORT_TITLE"></a></li><li><a
 	href="<TMPL_VAR NAME="TAG_CLOUD_URL">" title="<TMPL_VAR NAME="TAG_CLOUD_DESCRIPTION">"><TMPL_VAR NAME="TAG_CLOUD_SHORT_TITLE"></a></li><li><a
+	href="<TMPL_VAR NAME="STATISTICS_URL">" title="<TMPL_VAR NAME="STATISTICS_DESCRIPTION">"><TMPL_VAR NAME="STATISTICS_SHORT_TITLE"></a></li><li><a
 	href="<TMPL_VAR NAME="SUBMIT_QUOTE_URL">" title="<TMPL_VAR NAME="SUBMIT_QUOTE_DESCRIPTION">"><TMPL_VAR NAME="SUBMIT_QUOTE_SHORT_TITLE"></a></li><TMPL_IF NAME="LOGGED_IN"><li><a
 	href="<TMPL_VAR NAME="ADMINISTRATION_URL">" title="<TMPL_VAR NAME="ADMINISTRATION_DESCRIPTION">"><TMPL_VAR NAME="ADMINISTRATION_SHORT_TITLE"></a></li><li><a
 	href="<TMPL_VAR NAME="LOGOUT_URL">" title="<TMPL_VAR NAME="LOGOUT_DESCRIPTION">"><TMPL_VAR NAME="LOGOUT_SHORT_TITLE"></a></li><TMPL_ELSE><li><a
